# KBWS

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in  libtool
acd/: Makefile.in  kblast.acd  kcentroidfold.acd  kclique.acd  kclustalw.acd  kcontml.acd  kdnacomp.acd  kdnadist.acd  kdnainvar.acd  kdnaml.acd  kdnamlk.acd  kdnapars.acd  kdnapenny.acd  kdollop.acd  kdolpenny.acd  kfetchbatch.acd  kfetchdata.acd  kfitch.acd  kgendist.acd  kgenemarkhmm.acd  kglimmer.acd  kkalign.acd  kkitsch.acd  kmafft.acd  kmix.acd  kmuscle.acd  kneighbor.acd  kpathwayprojector.acd  kpenny.acd  kphobius.acd  kprotdist.acd  kprotpars.acd  kpsort.acd  kpsort2.acd  kpsortb.acd  krestml.acd  krnafold.acd  kseqboot.acd  kshowblastdb.acd  kssearch.acd  (+4 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: embossrc-template
doc/: Makefile.in
doc/html/: Makefile.am  Makefile.in  index.html  kblast.html  kcentroidfold.html  kclique.html  kclustalw.html  kcontml.html  kdnacomp.html  kdnadist.html  kdnainvar.html  kdnaml.html  kdnamlk.html  kdnapars.html  kdnapenny.html  kdollop.html  kdolpenny.html  kfetchbatch.html  kfetchdata.html  kfitch.html  kgendist.html  kgenemarkhmm.html  kglimmer.html  kkalign.html  kkitsch.html  kmafft.html  kmix.html  kmuscle.html  kneighbor.html  kpathwayprojector.html  kpenny.html  kphobius.html  kprotdist.html  kprotpars.html  kpsort.html  kpsort2.html  kpsortb.html  krestml.html  krnafold.html  kseqboot.html  (+6 more)
doc/text/: Makefile.am  Makefile.in  kblast.txt  kcentroidfold.txt  kclique.txt  kclustalw.txt  kcontml.txt  kdnacomp.txt  kdnadist.txt  kdnainvar.txt  kdnaml.txt  kdnamlk.txt  kdnapars.txt  kdnapenny.txt  kdollop.txt  kdolpenny.txt  kfetchbatch.txt  kfetchdata.txt  kfitch.txt  kgendist.txt  kgenemarkhmm.txt  kglimmer.txt  kkalign.txt  kkitsch.txt  kmafft.txt  kmix.txt  kmuscle.txt  kneighbor.txt  kpathwayprojector.txt  kpenny.txt  kphobius.txt  kprotdist.txt  kprotpars.txt  kpsort.txt  kpsort2.txt  kpsortb.txt  krestml.txt  krnafold.txt  kseqboot.txt  kshowblastdb.txt  (+5 more)
gsoap/: Makefile
gsoap/.deps/: libgsoap___a-stdsoap2_cpp.Po  libgsoap_a-stdsoap2.Po  libgsoapck___a-stdsoap2_ck_cpp.Po  libgsoapck_a-stdsoap2_ck.Po  libgsoapssl___a-stdsoap2_ssl_cpp.Po  libgsoapssl_a-stdsoap2_ssl.Po
gsoap/samples/: Makefile
gsoap/samples/calc/: Makefile
gsoap/samples/calc++/: Makefile
gsoap/samples/dime/: Makefile
gsoap/samples/dom/: Makefile
gsoap/samples/events/: Makefile
gsoap/samples/events++/: Makefile
gsoap/samples/factory/: Makefile
gsoap/samples/factorytest/: Makefile
gsoap/samples/gmt/: Makefile
gsoap/samples/googleapi/: Makefile
gsoap/samples/hello/: Makefile
gsoap/samples/httpcookies/: Makefile
gsoap/samples/lu/: Makefile
gsoap/samples/magic/: Makefile
gsoap/samples/mashup/: Makefile
gsoap/samples/mashup++/: Makefile
gsoap/src/: Makefile  soapcpp2  soapcpp2_lex.c  soapcpp2_yacc.c  soapcpp2_yacc.h  soapcpp2_yacc.output
gsoap/wsdl/: Makefile  wsdlC.cpp  wsdlH.h  wsdlStub.h
include/: KBWSSoapBinding.checkStatus.req.xml  KBWSSoapBinding.checkStatus.res.xml  KBWSSoapBinding.checkStatus_retJobid.req.xml  KBWSSoapBinding.checkStatus_retJobid.res.xml  KBWSSoapBinding.getMultiResult.req.xml  KBWSSoapBinding.getMultiResult.res.xml  KBWSSoapBinding.getResult.req.xml  KBWSSoapBinding.getResult.res.xml  KBWSSoapBinding.map2PathwayProjector.req.xml  KBWSSoapBinding.map2PathwayProjector.res.xml  KBWSSoapBinding.nsmap  KBWSSoapBinding.runBlast.req.xml  KBWSSoapBinding.runBlast.res.xml  KBWSSoapBinding.runCentroidfold.req.xml  KBWSSoapBinding.runCentroidfold.res.xml  KBWSSoapBinding.runClique.req.xml  KBWSSoapBinding.runClique.res.xml  KBWSSoapBinding.runClustalw.req.xml  KBWSSoapBinding.runClustalw.res.xml  KBWSSoapBinding.runContml.req.xml  KBWSSoapBinding.runContml.res.xml  KBWSSoapBinding.runDnacomp.req.xml  KBWSSoapBinding.runDnacomp.res.xml  KBWSSoapBinding.runDnadist.req.xml  KBWSSoapBinding.runDnadist.res.xml  KBWSSoapBinding.runDnainvar.req.xml  KBWSSoapBinding.runDnainvar.res.xml  KBWSSoapBinding.runDnaml.req.xml  KBWSSoapBinding.runDnaml.res.xml  KBWSSoapBinding.runDnamlk.req.xml  KBWSSoapBinding.runDnamlk.res.xml  KBWSSoapBinding.runDnapars.req.xml  KBWSSoapBinding.runDnapars.res.xml  KBWSSoapBinding.runDnapenny.req.xml  KBWSSoapBinding.runDnapenny.res.xml  KBWSSoapBinding.runDollop.req.xml  KBWSSoapBinding.runDollop.res.xml  KBWSSoapBinding.runDolpenny.req.xml  KBWSSoapBinding.runDolpenny.res.xml  KBWSSoapBinding.runFetchBatch.req.xml  (+67 more)
src/: Makefile.am  Makefile.in  config.h.in  kblast.c  kcentroidfold.c  kclique.c  kclustalw.c  kcontml.c  kdnacomp.c  kdnadist.c  kdnainvar.c  kdnaml.c  kdnamlk.c  kdnapars.c  kdnapenny.c  kdollop.c  kdolpenny.c  kfetchbatch.c  kfetchdata.c  kfitch.c  kgendist.c  kgenemarkhmm.c  kglimmer.c  kkalign.c  kkitsch.c  kmafft.c  kmix.c  kmuscle.c  kneighbor.c  kpathwayprojector.c  kpenny.c  kphobius.c  kprotdist.c  kprotpars.c  kpsort.c  kpsort2.c  kpsortb.c  krestml.c  krnafold.c  kseqboot.c  (+6 more)
(+25 files in other folders)
