pkgdata_DATA = index.html \
               kblast.html        kcentroidfold.html  kdnadist.html     kdnapenny.html  kfitch.html    \
               kkitsch.html       kpenny.html         kpsort2.html      ktcoffee.html   kclique.html   \
               kdnainvar.html     kdollop.html        kgendist.html     kmafft.html     kphobius.html  \
               kpsortb.html       ktrnascan_se.html   kclustalw.html    kdnaml.html     kdolpenny.html \
               kgenemarkhmm.html  kmix.html           kprotdist.html    krestml.html    kweblogo.html  \
               kcontml.html       kdnamlk.html        kfetchbatch.html  kglimmer.html   kmuscle.html   \
               kprotpars.html     kseqboot.html       kwolfpsort.html   kdnacomp.html   kdnapars.html  \
               kfetchdata.html    kkalign.html        kneighbor.html    kpsort.html     kssearch.html  \
               kshowblastdb.html  krnafold.html

pkgdatadir=$(prefix)/share/EMBOSS/doc/html/embassy/kbws

