pkgdata_DATA = kblast.txt kcentroidfold.txt kclique.txt kclustalw.txt kcontml.txt kdnacomp.txt kdnadist.txt kdnainvar.txt \
               kdnaml.txt kdnamlk.txt kdnapars.txt kdnapenny.txt kdollop.txt kdollop.txt kdolpenny.txt kfetchbatch.txt \
	       kfetchdata.txt kfitch.txt kgendist.txt kgenemarkhmm.txt kglimmer.txt kkalign.txt kkitsch.txt kmafft.txt \
	       kmix.txt kmuscle.txt kneighbor.txt kpenny.txt kphobius.txt kprotdist.txt kprotpars.txt kpsort.txt \
	       kpsort2.txt kpsortb.txt krestml.txt kseqboot.txt kssearch.txt ktcoffee.txt ktrnascan_se.txt kweblogo.txt \
	       kwolfpsort.txt krnafold.txt kshowblastdb.txt kpathwayprojector.txt

pkgdatadir=$(prefix)/share/EMBOSS/doc/programs/text

